--- a/Project_03/css/style.css
+++ b/Project_03/css/style.css
@@ -1,642 +1,557 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto';
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Open Sans";
 }
 
-html,
-body {
-    height: 100%;
+html,body{
+	height: 100%;
 }
 
-.clear {
-    clear: both;
+.container{
+	max-width: 1280px;
+	margin:0 auto;
 }
 
-header {
-    width: 100%;
-    height: 90vh;
-    min-height: 800px;
-    /* max-height: 700px; */
-    padding: 40px 2%;
-    background-image: url('../imagem/capa.png');
-    background-size: cover;
-    background-position: center;
+.clear{
+	clear: both;
 }
 
-
-/* Container, onde ficara o conteudo em geral*/
-
-.container {
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
+header{
+	width: 100%;
+	height: 90vh;
+	min-height: 800px;
+	padding:40px 2%;
+	/*max-height: 700px;*/
+	background-size: cover;
+	background-position: center;
+	background-image: url('../imagens/capa.png');
+	font-weight: 300;
 }
-
 
-/****************/
-
-header nav {
-    float: right;
+header nav{
+	float: right;
 }
 
-nav.mobile-menu {
-    display: none;
-    width: 32px;
-    height: 32px;
-    background-image: url('../imagem/menu.png');
-    background-size: 100% 100%;
-    cursor: pointer;
+nav.mobile-menu{
+	cursor: pointer;
+	display: none;
+	width: 32px;
+	height: 32px;
+	background-image: url('../imagens/menu.png');
+	background-size: 100% 100%;
 }
 
-nav.mobile-menu:hover ul {
-    opacity: 1;
+nav.mobile-menu:hover ul{
+	opacity: 1;
 }
 
-nav.mobile-menu ul {
-    position: absolute;
-    left: 0;
-    top: 80px;
-    width: 100%;
-    /* padding: 20px 0; */
-    /* color: white; */
-    list-style-type: none;
-    background-color: white;
-    text-align: center;
-    opacity: 0;
-    transition: 1s;
+nav.mobile-menu ul{
+	opacity: 0;
+	transition: 1s;
+	background-color: white;
+	position: absolute;
+	width: 100%;
+	left: 0;
+	top: 80px;
+	list-style-type: none;
+	text-align: center;
 }
 
-nav.mobile-menu ul li {
-    border-bottom: 1px solid black;
-    padding: 8px 0;
+nav.mobile-menu ul li{
+	padding:8px 0;
+	transition: 0.4s;
+	border-bottom: 1px solid black;
 }
 
-nav.mobile-menu ul li:hover {
-    background-color: rgb(214, 211, 211);
+nav.mobile-menu ul li:hover{
+	background-color: rgb(230,230,230);
 }
 
-nav.mobile-menu ul li a {
-    text-decoration: none;
-    color: black;
+nav.mobile-menu ul li a{
+	color: black;
+	text-decoration: none;
 }
 
-header nav.desktop-menu ul {
-    list-style-type: none;
+header .logo{
+	float: left;
+	width: 160px;
+	height: 40px;
+	background-color: #ccc;
 }
 
-header nav.desktop-menu li {
-    float: left;
-    margin: 0 20px;
+header nav.desktop-menu ul{
+	list-style-type: none;
 }
 
-header nav.desktop-menu a {
-    text-decoration: none;
-    color: white;
+header nav.desktop-menu li{
+	float: left;
+	padding:0 20px;
 }
 
-header .logo {
-    width: 140px;
-    height: 40px;
-    float: left;
-    background-color: #979797;
+header nav.desktop-menu li a{
+	text-decoration: none;
+	color: white;
 }
-
-
-/* iniciando chamada 1 */
 
-.chamada1 {
-    float: right;
-    margin: 140px 150px;
-    max-width: 600px;
+.chamada1{
+	max-width: 600px;
+	float: right;
+	margin:200px 150px;
 }
 
-.chamada1 h2 {
-    color: white;
-    font-weight: 300;
-    font-size: 40px;
+.chamada1 h2{
+	font-weight: 300;
+	font-size: 40px;
+	color: white;
 }
 
-.chamada1 p {
-    font-size: 15px;
-    color: wheat;
-    margin-top: 10px;
+.chamada1 p{
+	font-size: 15px;
+	color: white;
+	margin-top:10px;
 }
 
-
-/* terminado chamada 1 */
-
-
-/* iniciando sessao 1 */
-
-section.sessao1 {
-    width: 100%;
-    height: 400px;
-    padding: 0px 2%;
-    background-color: #472562;
+section.sessao1{
+	width: 100%;
+	background-color: #472562;
+	padding:0 2%;
+	height: 400px;
 }
 
-section.sessao1 .container {
-    max-width: 1000px;
+section.sessao1 .container{
+	max-width: 1000px;
+	height: calc(100% + 30px);
 }
 
-.sessao-texto1 {
-    float: left;
-    color: rgb(255, 255, 255);
-    width: 50%;
-    margin-top: 40px;
-    padding-left: 60px;
-    position: relative;
-    left: 55px;
+.texto-sessao1{
+	float: left;
+	width: 50%;
+	position: relative;
+	left: 55px;
+	margin-top:60px;
+	padding-left: 80px;
+	color: white;
 }
 
-.sessao-texto1 h2 {
-    font-size: 26px;
-    font-weight: 300;
+.texto-sessao1 h2{
+	font-size: 26px;
+	font-weight: 300;
 }
 
-.sessao-texto1 p {
-    font-size: 13px;
-    margin-top: 20px;
+.texto-sessao1 p{
+	margin-top:20px;
+	font-size: 15px;
 }
 
-.sessao-texto1 ul {
-    font-size: 15px;
-    list-style-position: inside;
+.texto-sessao1 ul{
+	font-size: 15px;
+	list-style-position: outside;
+	padding-left: 15px;
 }
 
-.sessao-texto1 ul li {
-    width: 100%;
-    margin-top: 8px;
-    float: left;
+.texto-sessao1 ul li{
+	width: 100%;
+	margin-top:8px;
 }
 
-.btn1-texto {
-    background-color: #FF703D;
-    width: 165px;
-    height: 44px;
-    color: white;
-    cursor: pointer;
-    margin-top: 20px;
-    text-align: center;
-    /* para centralizar */
-    line-height: 44px;
-    border-radius: 30px;
-    float: left;
+.btn1-texto{
+	background-color: #FF703D;
+	width: 165px;
+	height: 44px;
+	font-size: 13px;
+	color: white;
+	cursor: pointer;
+	margin-top:30px;
+	text-align: center;
+	line-height: 44px;
+	border-radius: 30px;
 }
-
-
-/* terminado sessao 1 */
 
-
-/* iniciando sessao-device1 */
-
-.sessao-device1 {
-    float: left;
-    width: 50%;
-    height: 430px;
-    position: relative;
-    top: -30px;
-    background-image: url('../imagem/device.png');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+.device-sessao1{
+	float: left;
+	width: 50%;
+	position: relative;
+	top:-30px;
+	height: 100%;
+	background-image: url('../imagens/device.png');
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
 }
-
-
-/* **************** */
-
-
-/* iniciando sessao 2 */
 
-section.sessao2 {
-    padding-left: 2%;
-    padding-right: 2%;
-    background-color: white;
-    text-align: center;
+.sessao2{
+	padding-left: 2%;
+	padding-right: 2%;
+	background: white;
+	text-align: center;
 }
 
-.sessao2 .container {
-    max-width: 1000px;
+.sessao2 .container{
+	max-width: 1000px;
 }
 
-.sessao2 {
-    color: #472663;
-    font-weight: 300;
+.sessao2 h2{
+	color: #472663;
+	font-weight: 300;
 }
 
-.sessao2 p {
-    margin-top: 30px;
-    max-width: 900px;
-    display: inline-block;
+.sessao2 p{
+	margin-top:30px;
+	max-width: 900px;
+	display:inline-block;
 }
 
-.sessao2 img {
-    width: 100%;
-    margin-top: 10px;
-    position: relative;
-    top: 70px;
+.sessao2 img{
+	position: relative;
+	top: 70px;
+	width: 100%;
+	margin-top:10px;
 }
 
-
-/* terminado sessao 2 */
-
-
-/* inicianado sessao 3 */
-
-.sessao3 {
-    width: 100%;
+.sessao3{
+	width: 100%; 
 }
-
 
-/* parte 1 */
-
-.part1 {
-    float: left;
-    width: 50%;
-    padding: 140px 0 90px 0;
-    background-color: #660266;
-    color: white;
+.part1{
+	color: white;
+	float: left;
+	width: 50%;
+	padding:140px 0 90px 0;
+	background: #835FA7;
 }
 
-.wraper-part1 {
-    max-width: 600px;
-    float: right;
-    padding: 0 30px;
+.wraper-part1{
+	max-width: 600px;
+	float: right;
+	padding:0 30px;
 }
 
-.part1 h2 {
-    font-weight: 300;
-    font-style: italic;
-    font-size: 23px;
+.part1 h2{
+	font-weight: 300;
+	font-style: italic;
+	font-size: 23px;
 }
 
-.part1 p {
-    margin-top: 15px;
-    font-size: 15px;
-    line-height: 35px;
+.part1 p{
+	font-size: 15px;
+	line-height: 35px;
+	margin-top:10px;
 }
-
 
-/* fim da parte 1 */
-
-
-/* parte 2 */
-
-.part2 {
-    float: left;
-    width: 50%;
-    padding: 140px 0 90px 0;
+.part2{
+	float: left;
+	width: 50%;
+	padding:140px 0 90px 0;
+	background: white;
 }
 
-.sobre-autor {
-    float: left;
-    max-width: 600px;
-    padding-left: 30px;
+.sobre-autor{
+	float: left;
+	max-width: 600px;
+	padding-left: 30px;
 }
 
-.titulo-autor {
-    float: left;
-    width: 100%;
+.titulo-autor{
+	float: left;
+	width: 100%;
 }
 
-.wraper-titulo-autor {
-    /* width: calc(100% - 40px); */
-    float: left;
+.wraper-titulo-autor{
+	float: left;
 }
 
-.titulo-autor h2 {
-    /* float: left; */
-    padding-right: 20px;
-    color: #232323;
-    font-weight: 400;
-    font-size: 21px;
+.titulo-autor h2{
+	color: #232323;
+	font-weight: 400;
+	font-size: 21px;
+	padding-right: 20px;
 }
 
-.titulo-autor p {
-    padding-right: 15px;
-    color: #232323;
-    font-weight: 300;
-    font-size: 13px;
-    font-style: italic;
+.titulo-autor p{
+	font-size: 13px;
+	color: #232323;
+	font-style: italic;
+	font-weight: 300;
 }
 
-.titulo-autor .foto-autor {
-    float: left;
-    width: 40px;
-    height: 40px;
-    position: relative;
-    top: -6px;
-    background-color: grey;
-    border-radius: 20px;
+.titulo-autor .img-autor{
+	float: left;
+	width: 40px;
+	height:40px;
+	position: relative;
+	top:-4px;
+	border-radius: 20px;
+	background-color: gray;
 }
 
-.texto-autor {
-    float: left;
-    width: 100%;
-    margin-top: 10px;
+.texto-autor{
+	float: left;
+	width: 100%;
+	margin-top:10px;
 }
 
-.texto-autor p {
-    color: #232323;
-    font-size: 15px;
+.texto-autor p{
+	color: #232323;
+	font-size: 15px;
 }
 
-.slider-bullets {
-    float: left;
-    width: 100%;
-    margin-top: 12px;
-    padding-left: 30px;
+.slider-bullets{
+	width: 100%;
+	float: left;
+	padding-left: 30px;
+	margin-top:12px;
 }
 
-.slider-bullets span {
-    width: 16px;
-    height: 16px;
-    float: left;
-    margin-right: 8px;
-    background-color: gray;
-    border-radius: 8px;
-    cursor: pointer;
+.slider-bullets span{
+	width: 16px;
+	height: 16px;
+	float: left;
+	margin-right: 8px;
+	cursor: pointer;
+	border-radius: 8px;
+	background-color: rgb(200,200,200);
 }
 
+/* Aqui estou começando a sessão de número 4! */
 
-/* fim da parte 2 */
-
-
-/* terminado sessao 3*/
+section.sessao4{
+	background-color: #472563;
+	padding:100px 0;
+}
 
+.form{
+	float: left;
+	width: 50%;
+	color: white;
+	padding-left: 10px;
+}
 
-/* iniciou a sessao 4 */
+.form h2{
+	font-size: 23px;
+	font-weight: 300;
+}
 
-section.sessao4 {
-    background-color: #472563;
-    padding: 100px 0;
+.form p{
+	font-size: 15px;
+	font-weight: 300;
+	max-width: 400px;
+	padding-right: 10px;
 }
 
+.form form{
+	margin-top:15px;
+}
 
-/* continuando o .form e form */
+.form form input[type=text]{
+	width: 90%;
+	max-width: 480px;
+	margin-top:8px;
+	height: 58px;
+	padding-left: 8px;
+	line-height: 58px;
+	border:1px solid rgb(200,200,200);
+}
 
-.form {
-    float: left;
-    width: 50%;
-    color: white;
-    padding-left: 10px;
+.form form textarea{
+	width: 90%;
+	margin-top:8px;
+	max-width: 480px;
+	padding:15px;
+	border:1px solid rgb(200,200,200);
+	height: 160px;
 }
 
-.form h2 {
-    font-size: 23px;
-    font-weight: 300;
+.form form input[type=submit]{
+	border: 0;
+	background-color: #FF703D;
+	width: 165px;
+	height: 44px;
+	font-size: 13px;
+	color: white;
+	cursor: pointer;
+	margin-top:15px;
+	border-radius: 30px;
 }
 
-.form p {
-    font-size: 15px;
-    font-weight: 300;
-    max-width: 400px;
-    padding-right: 10px;
+.map-wraper{
+	float: left;
+	width: 50%;
+	padding:0 10px;
+	color: white;
 }
 
-.form form {
-    margin-top: 15px;
+.map-wraper h2{
+	font-size: 23px;
+	font-weight: 300;
 }
 
-.form form input[type=text] {
-    width: 90%;
-    max-width: 480px;
-    height: 58px;
-    padding-left: 8px;
-    line-height: 58px;
-    border: 1px solid rgb(200, 200, 200);
-    margin-top: 8px;
+.map-wraper3{
+	margin-top:10px;
+	width: 100%;
+	max-width: 480px;
+	position: relative;
 }
 
-.form form textarea {
-    width: 90%;
-    max-width: 480px;
-    padding: 15px;
-    border: 1px solid rgb(200, 200, 200);
-    height: 160px;
-    margin-top: 8px;
+.map-wraper2{
+	position: absolute;
+	left: 0;
+	top:0;
+	width: 100%;
+	padding-top:100%;
 }
 
-.form form input[type=submit] {
-    background-color: #FF703D;
-    width: 165px;
-    height: 44px;
-    color: white;
-    cursor: pointer;
-    margin-top: 20px;
-    border-radius: 30px;
-    float: left;
-    border: 0;
+.map{
+	left: 0;
+	top: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: white;
+	border:5px solid rgb(200,200,200);
 }
 
+/***/
 
-/* parando o .form e form */
+@media screen and (max-width: 830px){
 
+	.chamada1{
+		max-width: none;
+		width: 100%;
+		text-align: center;
+		float: none;
+		margin:170px 0;
+	}
 
-/* continuando o map */
+	.chamada1 h2{
+		font-weight: 300;
+		font-size: 30px;
+		padding:0 0px;
+		color: white;
+	}
 
-.map-wraper {
-    width: 50%;
-    float: left;
-    color: white;
-    padding: 0 10px;
+	.chamada1 p{
+		font-size: 15px;
+		color: white;
+		margin-top:10px;
+	}
 }
 
-.map-wraper h2 {
-    font-size: 23px;
-    font-weight: 300;
-}
+@media screen and (max-width: 768px){
 
-.map-wraper2 {
-    margin-top: 10px;
-    max-width: 480px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding-top: 100%;
+header{
+	width: 100%;
+	height: auto;
+	min-height: 90vh;
+	padding:40px 2%;
 }
 
-.map-wraper3 {
-    margin-top: 10px;
-    width: 100%;
-    max-width: 480px;
-    position: relative;
-    float: left;
+nav.desktop-menu{
+	display:none;
 }
 
-.map {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    border: 5px solid rgb(200, 200, 200);
+nav.mobile-menu{
+	display: block;
 }
 
 
-/* parando o map */
-
+section.sessao1{
+	padding:40px 2%;
+	height: auto;
+	text-align: center;
+}
 
-/* terminou a sessao 4 */
+.sessao1 .container{
+	height: auto;
+}
 
 
-/* media queri de 900px */
+.texto-sessao1{
+	width: 100%;
+	margin-top:0;
+	padding-left: 0;
+	position: static; 
+	float: none;
+	display: inline-block;
+}
 
-@media screen and (max-width: 900px) {
-    .sessao-device1 {
-        height: 340px;
-    }
-    section.sessao1 {
-        height: 310px;
-    }
+.texto-sessao1 ul{
+	display: inline-block;
+	margin-top:20px;
 }
 
+.texto-sessao1 ul li{
+	float: none;
+	text-align: left;
+}
 
-/* fim da media queri de 900px */
+.btn1-texto{
+	display: inline-block;
+}
 
+.device-sessao1{
+	display: none;
+}
 
-/* media queri de 830px */
+.sessao2{
+	padding-top: 40px;
+}
 
-@media screen and (max-width: 830px) {
-    .chamada1 {
-        text-align: center;
-        float: none;
-        margin: 100px 0;
-        max-width: none;
-        width: 100%;
-    }
-    .chamada1 h2 {
-        font-weight: 300;
-        font-size: 30px;
-        padding: 60px 10px 0px 10px;
-    }
-    .chamada1 p {
-        font-size: 15px;
-        color: wheat;
-        margin-top: 10px;
-    }
+section.sessao4 .container{
+	text-align: center;
 }
 
+.form{
+	float: none;
+	width: 100%;
+}
 
-/* fim da media queri de 830px */
+.form p{
+	display: inline-block;
+	float: none;
+}
 
+.map-wraper{
+	float: none;
+	width: 100%;
+	padding:0 8%;
+	margin-top:40px;
+}
 
-/* media queri 768px */
 
-@media screen and (max-width: 750px) {
-    header {
-        width: 100%;
-        height: auto;
-        min-height: 90vh;
-        padding: 40px 2%;
-    }
-    nav.desktop-menu {
-        display: none;
-    }
-    nav.mobile-menu {
-        display: block;
-    }
-    .sessao1 {
-        padding: 40px 2%;
-        height: auto;
-        text-align: center;
-    }
-    .sessao-texto1 {
-        float: none;
-        position: static;
-        margin-top: 0;
-        width: 100%;
-        display: inline-block;
-        padding-left: 0px;
-    }
-    .sessao-texto1 h2 {
-        padding-top: 10px;
-    }
-    .sessao-texto1 ul {
-        display: inline-block;
-        margin-top: 20px;
-    }
-    .sessao-texto1 ul li {
-        float: none;
-        text-align: left;
-        padding-top: 10px;
-    }
-    .btn1-texto {
-        display: block;
-        margin: 40px auto 0 auto;
-        float: none;
-    }
-    .sessao-device1 {
-        display: none;
-    }
-    .sessao2 {
-        padding-top: 40px 2%;
-    }
-    .sessao2 h2 {
-        padding-top: 10px;
-    }
-    .sessao4 .container {
-        text-align: center;
-    }
-    .form p {
-        float: none;
-        display: inline-block;
-    }
-    .form form input[type=submit] {
-        display: block;
-        margin: 40px auto;
-        float: none;
-    }
-    .form {
-        width: 100%;
-        padding-bottom: 10px;
-    }
-    .map-wraper {
-        float: none;
-        width: 100%;
-    }
-    .map-wraper3 {
-        margin-top: 10px;
-        margin-left: 107px;
-        width: 80%;
-        max-width: none;
-        padding-top: 80%;
-        margin-right: 20px;
-        position: relative;
-        display: inline-block;
-    }
-    .map-wraper2 {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding-top: 100%;
-    }
+.map-wraper3{
+	margin-top:10px;
+	width: 100%;
+	padding-top: 100%;
+	display: inline-block;
+	max-width: none;
+	position: relative;
 }
 
+.map-wraper2{
+	position: absolute;
+	left: 0;
+	top:0;
+	width: 100%;
+	height: 100%;
+	padding-top:0;
+}
 
-/* fim da media queri de 768px */
+}
 
+@media screen and (max-width: 580px){
+	.part1{
+		width: 100%;
+		padding:40px 0;
+	}
 
-/* media queri de 580px */
+	.part2{
+		width: 100%;
+		padding:40px 0;
+	}
 
-@media screen and (max-width: 580px) {
-    .part1 {
-        width: 100%;
-        padding: 40px 0;
-    }
-    .part2 {
-        width: 100%;
-        padding: 40px 0;
-    }
-    .sessao2 img {
-        top: 16px;
-        margin-top: 20px;
-    }
+	.sessao2 img{
+		top: 16px;
+		margin-top:20px;
+	}
 }
-
-
-/* fim da media queri de 500px */
