--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -2,11 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 html,
 body {
     height: 100%;
+}
+
+.clear {
+    clear: both;
 }
 
 section.Back_Box {
@@ -22,10 +27,7 @@ section.Back_Box {
 section.Back_Box .box1 {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.363), rgba(168, 1, 245, 0.384));
-    background-origin: padding-box;
-    /* position: absolute; */
-    z-index: -2;
+    position: relative;
 }
 
 
@@ -33,25 +35,23 @@ section.Back_Box .box1 {
 
 section.Back_Box .img1 {
     width: 100%;
-    height: 50%;
-    background-image: url('images/pattern-background-desktop.svg');
-    background-size: 100% 100%;
-    /* precisei do absolute para mexer livremente nesse tipo de arquivo */
+    height: 100%;
     position: absolute;
-    transform: scaleY(1.3);
     z-index: 1;
+}
+
+section.Back_Box img {
+    width: 100%;
+    height: 65%;
 }
 
 section.Back_Box .img2 {
     width: 100%;
-    height: 50%;
-    background-image: url('images/pattern-background-desktop.svg');
-    background-size: 100% 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 255, 0.514);
     /* precisei do absolute para mexer livremente nesse tipo de arquivo */
     position: absolute;
-    transform: rotateZ(180deg) translateY(-15px) scaleY(1.4);
-    bottom: 90px;
-    z-index: -1;
+    z-index: -2;
 }
 
 
@@ -59,13 +59,13 @@ section.Back_Box .img2 {
 
 section.espaco {
     position: absolute;
-    top: calc(722px/12);
-    left: calc(1536px/4);
+    top: 3%;
+    left: 25%;
     width: 50%;
     height: 50%;
     margin: 0 auto;
     text-align: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 section .area {
@@ -88,13 +88,12 @@ section .area>img {
 
 section .texto {
     margin: 0 auto;
-    padding: 15px 0;
+    padding: 20px 0;
     width: 100%;
 }
 
 section .texto h3 {
     padding-bottom: 5px;
-    font-family: 'Noto Sans JP', sans-serif;
     font-size: 30px;
     font-weight: 900;
 }
@@ -102,13 +101,165 @@ section .texto h3 {
 section .texto p {
     margin: 0 auto;
     text-align: center;
-    width: 80%;
-    padding: 0 10px;
+    width: 90%;
+    padding: 10px 20px;
     padding-bottom: 5px;
-    font-family: 'Noto Sans JP', sans-serif;
     font-size: 15px;
     font-weight: 400;
 }
 
 
 /* **** */
+
+
+/* parte de musica */
+
+div.musica {
+    margin: 0 auto;
+    width: 90%;
+    padding: 5% 0;
+    background-color: rgba(224, 222, 222, 0.342);
+    border-radius: 10px;
+}
+
+div.single-part {
+    text-align: center;
+    width: calc(100%/3);
+    float: left;
+    padding: 20px 2%;
+}
+
+
+/* logo da musica */
+
+div.single-part:nth-child(1) {
+    width: 20%;
+    padding: 0 2%;
+}
+
+
+/* texto da lateral */
+
+div.single-part:nth-child(2) {
+    width: 30%;
+    padding: 0% 2%;
+    transform: translateX(-10px);
+}
+
+div.single-part h4 {
+    font-size: 14px;
+    padding-bottom: 5px;
+    color: black;
+}
+
+div.single-part p {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.692);
+}
+
+
+/* link */
+
+div.single-part:nth-child(3) {
+    width: 40%;
+    padding: 3% 0 0 20%;
+}
+
+div.single-part a:link {
+    text-decoration: none;
+    color: rgba(45, 11, 235, 0.774);
+}
+
+
+/* ********* */
+
+
+/* Botão */
+
+div.final {
+    width: 100%;
+    padding: 5% 0;
+}
+
+div.final p {
+    padding-top: 10px;
+}
+
+div.final p>a {
+    color: rgba(45, 11, 235, 0.774);
+    text-decoration: none;
+}
+
+div .buton {
+    width: 70%;
+    padding: 3% 0;
+    background-color: rgba(45, 11, 235, 0.774);
+    border: 0;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+div .buton:hover {
+    background-color: rgba(45, 11, 235, 0.61);
+}
+
+div .buton a {
+    width: 100%;
+    /* sem isso o btão vai fazer nada, terão que clicar bem em cima do nome */
+    padding: 10% 30%;
+    text-decoration: none;
+    color: white;
+}
+
+div .buton a:link {
+    color: white;
+}
+
+div .buton a:visited {
+    color: white;
+}
+
+
+/* ****** */
+
+
+/* rodapé */
+
+footer.foot {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+footer .attribution {
+    padding: 2% 2%;
+}
+
+footer p {
+    color: rgba(0, 0, 0, 0.74);
+}
+
+footer a {
+    color: rgba(45, 11, 235, 0.774);
+    text-decoration: none;
+}
+
+
+/* ****** */
+
+@media screen and (max-width: 900px) {
+    div.single-part:nth-child(1) {
+        width: 30%;
+        padding: 0 0%;
+    }
+    div.single-part:nth-child(2) {
+        width: 40%;
+        padding: 0% 2%;
+        transform: translateX(0);
+    }
+    div.single-part:nth-child(3) {
+        width: 30%;
+        padding: 3% 0 0 0%;
+    }
+}
