--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -64,20 +64,27 @@ section.Back_Box .img2 {
 
 section.espaco {
     position: absolute;
-    top: 3%;
-    left: 25%;
-    width: 50%;
-    height: 50%;
+    top: 0;
+    left: center;
+    width: 100%;
+    height: 100%;
+    /* height: 90%; */
     margin: 0 auto;
+    padding: 0 auto;
     text-align: center;
     z-index: 2;
 }
 
 section .area {
     background-color: white;
-    width: 60%;
-    margin: 0 auto;
+    width: 25%;
+    height: auto;
+    margin: auto 25%;
     border-radius: 10% 10% 10% 10%;
+    position: absolute;
+    top: 5%;
+    bottom: center;
+    left: 13%;
 }
 
 section .area>img {
@@ -139,16 +146,16 @@ div.single-part {
 
 div.single-part:nth-child(1) {
     width: 20%;
-    padding: 0 2%;
+    padding: 0 10px;
 }
 
 
 /* texto da lateral */
 
 div.single-part:nth-child(2) {
-    width: 30%;
+    width: 40%;
     padding: 0% 2%;
-    transform: translateX(-10px);
+    transform: translateX(-15%);
 }
 
 div.single-part h4 {
@@ -166,8 +173,9 @@ div.single-part p {
 /* link */
 
 div.single-part:nth-child(3) {
-    width: 40%;
-    padding: 3% 0 0 20%;
+    width: 30%;
+    padding: 3% 0;
+    transform: translateX(30%);
 }
 
 div.single-part a:link {
@@ -211,16 +219,16 @@ div .buton:hover {
 div .buton a {
     width: 100%;
     /* sem isso o btão vai fazer nada, terão que clicar bem em cima do nome */
-    padding: 10% 30%;
+    padding: 0 auto;
     text-decoration: none;
     color: white;
 }
 
-div .buton a:link {
+div a:link .buton {
     color: white;
 }
 
-div .buton a:visited {
+div a:visited .buton {
     color: white;
 }
 
@@ -254,72 +262,135 @@ footer a {
 
 /* ****** */
 
-
-/* MN 1500px */
-
-@media screen and (min-width:1200px) {
-    section .texto p {
-        width: 100%;
-        padding: 7px 15px;
-        font-size: 14px;
-    }
-    div .buton a {
-        padding: 5% 15%;
-    }
-}
-
-
-/* fim MN 1500px */
-
-
-/* MW 1000px */
-
-@media screen and (max-width: 1000px),
-(min-width:1000px) {
-    div.single-part:nth-child(1) {
+@media screen and (max-width: 1320px) {
+    section .area {
+        background-color: white;
         width: 30%;
-        padding: 0 0%;
+        top: center;
+        left: 12%;
     }
+    /* icone */
+    div.single-part:nth-child(1) {
+        width: 20%;
+        padding: 0 10px;
+    }
+    /* texto */
     div.single-part:nth-child(2) {
         width: 40%;
         padding: 0% 2%;
-        transform: translateX(0);
+        transform: translateX(-10%);
     }
+    /* link */
     div.single-part:nth-child(3) {
         width: 30%;
-        padding: 3% 0 0 0%;
-    }
-    div .buton a {
-        padding: 5% 15%;
+        padding: 3% 0;
+        transform: translateX(15%);
     }
 }
 
-
-/* fim MW 1000px */
-
-
-/* MW 860px */
-
-@media screen and (max-width: 860px) {
-    section.Back_Box .img3 {
-        width: 100%;
-        height: 80%;
+@media screen and (max-width: 1100px) {
+    section .area {
+        width: 35%;
+        left: 7.8%;
     }
-    section.Back_Box .img1 {
-        display: none;
+    /* icone */
+    div.single-part:nth-child(1) {
+        width: 20%;
+        padding: 0 10px;
     }
-    section.Back_Box .img3 {
-        display: block;
+    /* texto */
+    div.single-part:nth-child(2) {
+        width: 40%;
+        padding: 0% 2%;
+        transform: translateX(-0%);
     }
-    section.espaco {
-        top: 5%;
-        left: 10%;
+    /* link */
+    div.single-part:nth-child(3) {
+        width: 30%;
+        padding: 3% 0;
+        transform: translateX(15%);
+    }
+}
+
+@media screen and (max-width: 940px) {
+    section .area {
+        width: 35%;
+        left: 7.8%;
+    }
+    /* icone */
+    div.single-part:nth-child(1) {
+        width: 30%;
+        padding: 0 10px;
+    }
+    /* texto */
+    div.single-part:nth-child(2) {
+        width: 40%;
+        padding: 0% 2%;
+    }
+    /* link */
+    div.single-part:nth-child(3) {
+        width: 30%;
+        padding: 3% 2%;
+        transform: translateX(10%);
+    }
+}
+
+@media screen and (max-width: 720px) {
+    section .area {
+        width: 45%;
+        left: 5.5%;
+    }
+    /* icone */
+    div.single-part:nth-child(1) {
+        width: 30%;
+        padding: 0 10px;
+    }
+    /* texto */
+    div.single-part:nth-child(2) {
+        width: 40%;
+        padding: 0% 2%;
+    }
+    /* link */
+    div.single-part:nth-child(3) {
+        width: 30%;
+        padding: 3% 2%;
+        transform: translateX(0%);
+    }
+}
+
+@media screen and (max-width: 562px) {
+    section .area {
+        width: 60%;
+        left: -2%;
+    }
+    /* icone */
+    div.single-part:nth-child(1) {
+        width: 30%;
+        padding: 0 10px;
+    }
+    /* texto */
+    div.single-part:nth-child(2) {
+        width: 40%;
+        padding: 0% 2%;
+    }
+    /* link */
+    div.single-part:nth-child(3) {
+        width: 30%;
+        padding: 3% 2%;
+        transform: translateX(0%);
+    }
+}
+
+@media screen and (max-width: 562px) {
+    section .area {
+        width: 70%;
+        left: -10%;
+    }
+}
+
+@media screen and (max-width: 355px) {
+    section .area {
         width: 80%;
-        margin: 0 auto;
-        text-align: center;
-        z-index: 2;
+        left: -14%;
     }
 }
-
-
-/* fim MW 860px */
