--- a/Componente-de-visualizacao-de-Artigo/CSS/style.css
+++ b/Componente-de-visualizacao-de-Artigo/CSS/style.css
@@ -1,225 +1,303 @@
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap');
-        font-family: 'Manrope', sans-serif;
-        font-weight: 500;
-        max-width: 100vw;
-    }
-    
-    html,
-    body {
-        height: 100%;
-        background-color: hsl(210, 46%, 95%);
-    }
-    
-    main {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap');
+    font-family: 'Manrope', sans-serif;
+    font-weight: 500;
+    max-width: 100vw;
+}
+
+html,
+body {
+    height: 100%;
+    background-color: hsl(210, 46%, 95%);
+}
+
+main {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section {
+    max-width: 90vw;
+    width: 850px;
+    height: 50%;
+    /* background-color: aqua; */
+    display: flex;
+    background-color: white;
+}
+
+div.img {
+    width: 100%;
+    height: 100%;
+}
+
+div.img img {
+    width: 100%;
+    height: 100%;
+}
+
+div.grid-container {
+    display: grid;
+    grid-template-columns: 50% 30% 20%;
+    grid-template-rows: 35% 32% 32%;
+    padding: 0 20px;
+    height: auto;
+}
+
+div.grid-content {
+    width: 100%;
+    height: 100%;
+    /* padding: 2%; */
+    grid-column: 1 /span 3;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+div .grid-content h4 {
+    font-weight: 700;
+    font-size: large;
+    color: rgba(58, 56, 56, 0.815);
+}
+
+
+/* TEXTO DO MEIO */
+
+div.content1 {
+    width: 100%;
+    height: 100%;
+    grid-row: 2;
+    grid-column: 1/span 3;
+}
+
+div.content1 p {
+    margin-top: 15px;
+    width: 100%;
+    text-align: left;
+    font-weight: 500;
+    font-size: 16px;
+    color: rgba(56, 54, 54, 0.815);
+}
+
+
+/* MICHELE */
+
+div.content2 {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    grid-row: 3;
+    grid-column: 1/span 3;
+    align-items: center;
+}
+
+div.content2 .author p {
+    margin-left: 15px;
+    font-weight: 700;
+}
+
+.author p:nth-child(1) {
+    font-size: 16px;
+    color: hsl(214, 16%, 43%);
+    padding-bottom: 5px;
+}
+
+.author p:nth-child(2) {
+    font-size: 13px;
+    color: hsl(212, 23%, 69%);
+    text-align: center;
+}
+
+.img-avatar {
+    display: inline-block;
+}
+
+div.content2 img {
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+}
+
+
+/* SHARE */
+
+div.content3 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    grid-row: 3;
+    grid-column: 3;
+    border-radius: 20px;
+}
+
+div.content3 img {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.PopOver {
+    display: none;
+    width: 210px;
+    position: absolute;
+    bottom: 90px;
+    background: hsl(217, 19%, 35%);
+    z-index: 1060;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid hsl(217, 20%, 28%);
+    border-radius: 10px;
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.PopOver_Content {
+    padding: 9px 14px;
+}
+
+.PopOver_Content span {
+    padding-right: 15px;
+    color: white;
+    font-size: smaller;
+}
+
+.PopOver_Content img {
+    margin-right: 5px;
+}
+
+.PopOver:after,
+.PopOver:before {
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+}
+
+.PopOver:after {
+    border-color: rgba(235, 4, 4, 0);
+    border-width: 10px;
+}
+
+.arrow_Down:after {
+    left: 50%;
+    top: 100%;
+    border-top-color: hsl(217, 19%, 35%);
+    margin-left: -10px;
+}
+
+.arrow_Down:before {
+    left: 50%;
+    top: 100%;
+    border-top-color: hsl(217, 20%, 28%);
+    margin-left: -11px;
+}
+
+.show {
+    display: block;
+}
+
+@media screen and (max-width: 768px) {
     section {
-        max-width: 90vw;
-        width: 850px;
-        height: 50%;
-        /* background-color: aqua; */
-        display: flex;
-        background-color: white;
-    }
-    
-    div.img {
-        width: 100%;
-        height: 100%;
-    }
-    
-    div.img img {
-        width: 100%;
-        height: 100%;
-    }
-    
-    div.grid-container {
-        display: grid;
-        grid-template-columns: 50% 30% 20%;
-        grid-template-rows: 35% 32% 32%;
-        padding: 0 20px;
+        width: 70vw;
         height: auto;
+        flex-direction: column;
     }
-    
-    div.grid-content {
-        width: 100%;
+    div.img {
+        width: 70vw;
+        height: 70%;
+    }
+    div.grid-container {
+        flex-direction: column;
+        grid-template-columns: 33.3% 33.3% 33.3%;
+        grid-template-rows: 40% 30% 20%;
         height: 100%;
-        /* padding: 2%; */
-        grid-column: 1 /span 3;
-        justify-content: center;
-        margin-top: 15px;
+        width: 70vw;
     }
-    
-    div .grid-content h4 {
-        font-weight: 700;
-        font-size: large;
-        color: rgba(58, 56, 56, 0.815);
-    }
-    /* TEXTO DO MEIO */
-    
     div.content1 {
-        width: 100%;
-        height: 100%;
-        grid-row: 2;
-        grid-column: 1/span 3;
+        margin-top: 10px;
     }
-    
-    div.content1 p {
-        margin-top: 15px;
-        width: 100%;
-        text-align: left;
-        font-weight: 500;
-        font-size: 16px;
-        color: rgba(56, 54, 54, 0.815);
-    }
-    /* MICHELE */
-    
     div.content2 {
-        display: flex;
-        width: 100%;
-        height: 100%;
-        grid-row: 3;
-        grid-column: 1/span 3;
-        align-items: center;
+        margin: 20px 0;
     }
-    
-    div.content2 .author p {
-        margin-left: 15px;
-        font-weight: 700;
-    }
-    
-    .author p:nth-child(1) {
-        font-size: 16px;
-        color: hsl(214, 16%, 43%);
-        padding-bottom: 5px;
-    }
-    
-    .author p:nth-child(2) {
-        font-size: 13px;
-        color: hsl(212, 23%, 69%);
-        text-align: center;
-    }
-    
-    .img-avatar {
-        display: inline-block;
-    }
-    
-    div.content2 img {
-        width: 50px;
-        height: 50px;
-        border-radius: 20px;
-    }
-    /* SHARE */
-    
-    div.content3 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        grid-row: 3;
-        grid-column: 3;
-        /* background-color: aqua; */
-        border-radius: 20px;
-    }
-    
     div.content3 img {
-        width: 20px;
-        height: 20px;
+        margin-bottom: -30px;
     }
-    
-    @media screen and (max-width: 768px) {
-        section {
-            width: 70vw;
-            height: auto;
-            flex-direction: column;
-        }
-        div.img {
-            width: 70vw;
-            height: 70%;
-        }
-        div.grid-container {
-            flex-direction: column;
-            grid-template-columns: 33.3% 33.3% 33.3%;
-            grid-template-rows: 40% 30% 20%;
-            height: 100%;
-            width: 70vw;
-        }
-        div.content1 {
-            margin-top: 10px;
-        }
-        div.content2 {
-            margin: 20px 0;
-        }
-        div.content3 img {
-            margin-bottom: -30px;
-        }
+}
+
+
+/* *************** */
+
+
+/* teste */
+
+
+/* ************** */
+
+@media screen and (max-width: 450px) {
+    section {
+        max-width: 80vw;
+        width: 500px;
+        height: auto;
+        flex-direction: column;
     }
-    
-    @media screen and (max-width: 450px) {
-        section {
-            max-width: 80vw;
-            width: 500px;
-            height: auto;
-            flex-direction: column;
-        }
-        div.img {
-            width: 80vw;
-            height: 70%;
-        }
-        div.grid-container {
-            flex-direction: column;
-            grid-template-columns: 33.3% 33.3% 33.3%;
-            grid-template-rows: 35% 30% 20%;
-            height: 100%;
-            width: 80vw;
-        }
-        div.content1 {
-            margin-top: 5px;
-        }
-        div.content2 {
-            margin: 20px 0;
-        }
-        div.content3 img {
-            margin-bottom: -30px;
-            margin-left: 30px;
-        }
+    div.img {
+        width: 80vw;
+        height: 70%;
     }
-    
-    @media screen and (max-width: 360px) {
-        section {
-            max-width: 80vw;
-            width: 500px;
-            height: auto;
-            flex-direction: column;
-        }
-        div.img {
-            width: 80vw;
-            height: 70%;
-        }
-        div.grid-container {
-            flex-direction: column;
-            grid-template-columns: 33.3% 33.3% 33.3%;
-            grid-template-rows: 37% 30% 20%;
-            height: 100%;
-            width: 80vw;
-        }
-        div.content1 {
-            margin-top: 10px;
-        }
-        div.content2 {
-            width: 100%;
-            margin: 20px 0;
-        }
-        div.content3 img {
-            margin-bottom: -30px;
-            margin-left: 40px;
-        }
+    div.grid-container {
+        flex-direction: column;
+        grid-template-columns: 33.3% 33.3% 33.3%;
+        grid-template-rows: 35% 30% 20%;
+        height: 100%;
+        width: 80vw;
     }
+    div.content1 {
+        margin-top: 5px;
+    }
+    div.content2 {
+        margin: 20px 0;
+    }
+    div.content3 img {
+        margin-bottom: -30px;
+        margin-left: 30px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    section {
+        max-width: 80vw;
+        width: 500px;
+        height: auto;
+        flex-direction: column;
+    }
+    div.img {
+        width: 80vw;
+        height: 70%;
+    }
+    div.grid-container {
+        flex-direction: column;
+        grid-template-columns: 33.3% 33.3% 33.3%;
+        grid-template-rows: 37% 30% 20%;
+        height: 100%;
+        width: 80vw;
+    }
+    div.content1 {
+        margin-top: 10px;
+    }
+    div.content2 {
+        width: 100%;
+        margin: 20px 0;
+    }
+    div.content3 img {
+        margin-bottom: -30px;
+        margin-left: 40px;
+    }
+}
